Project Laundry_Shop_Management_System {
  database_type: 'PostgreSQL'
  Note: 'ERD for Laundry Shop Management System (Faith Laundry Shop as baseline case study). Supports dynamic configurable pricing, order lifecycle, payment recording, and reporting. Standardized on varchar for enums to ensure JPA/PostgreSQL casting stability. Forensic audit trail via database-level triggers writing to activity_logs.'
}

// --- ENUMS (Documented for Reference; Implemented as varchar) --- //
/*
  user_role: ADMIN, STAFF
  order_status: RECEIVED, WASHING, DRYING, FOLDING, READY_FOR_PICKUP, RELEASED, CANCELLED
  payment_status: UNPAID, PAID, PARTIAL, VOIDED, REFUNDED
  payment_method: CASH, GCASH, BANK_TRANSFER
  notification_status: PENDING, SENT, FAILED
  notification_channel: SMS, IN_APP
  activity_action: INSERT, UPDATE, DELETE, USER_LOGIN, ORDER_CREATE, ORDER_UPDATE, ORDER_STATUS_UPDATE, PAYMENT_RECORD, PAYMENT_VOID
*/

// --- AUDIT INFRASTRUCTURE --- //

Table audit_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id varchar [null, note: 'Captured from SET LOCAL app.current_user_id via Spring Boot AOP']
  action_type varchar(10) [not null, note: 'INSERT, UPDATE, or DELETE']
  table_name varchar(100) [not null]
  record_id varchar(255) [not null]
  old_data jsonb [null, note: 'Snapshot before change (Trigger-based updates)']
  new_data jsonb [null, note: 'Snapshot after change (Trigger-based updates)']
  ip_address varchar(45) [null]
  user_agent text [null]
  status varchar(20) [null, note: 'SUCCESS or FAILURE']
  method_name varchar(255) [null]
  description text [null]
  created_at timestamp [not null, default: `now()`]

  Note: 'Forensic audit trail. Populated by fn_audit_activity() trigger on orders, payments, customers, service_rates.'
  Indexes {
    (table_name, record_id) [name: 'idx_audit_logs_table_record']
    created_at [name: 'idx_audit_logs_created_at']
  }
}

// --- CONFIGURATION --- //

Table service_rates {
  id uuid [pk, default: `gen_random_uuid()`]
  service_name varchar [default: 'Standard Wash', note: 'Standard Wash-Dry-Fold']
  base_price_per_load decimal(10,2) [default: 140.00, note: 'BR-PR-01: Configurable base price per load (default: ₱140.00)']
  kg_limit_per_load decimal(5,2) [default: 8.00, note: 'BR-PR-01: Configurable weight limit per load (default: 8.00 kg)']
  price_per_extra_minute decimal(10,2) [default: 1.00, note: 'BR-PR-03: Configurable extra minute price (default: ₱1.00)']
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`, note: 'Auto-updated by trg_service_rates_updated_at trigger']

  Note: 'Stores dynamic pricing rules. Owner can update without code changes. Snapshot copied to orders at creation. Audited by trg_audit_service_rates trigger.'
}

// --- USERS & CUSTOMERS --- //

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  username varchar [unique, not null]
  password_hash varchar [not null]
  role varchar [not null, default: 'STAFF', note: 'ADMIN / STAFF']
  first_name varchar [not null]
  last_name varchar [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`, note: 'Auto-updated by trg_users_updated_at trigger']

  Note: 'System users. RBAC enforced: Admin vs Staff.'
}

Table customers {
  id uuid [pk, default: `gen_random_uuid()`]
  first_name varchar [not null]
  last_name varchar [not null]
  contact_number varchar [not null]
  is_active boolean [not null, default: true, note: 'Soft delete flag']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`, note: 'Auto-updated by trg_customers_updated_at trigger']

  Note: 'BR-REC-01: Identity is a combination of name and contact. Audited by trg_audit_customers trigger.'
  Indexes {
    (last_name, first_name, contact_number) [unique]
  }
}

// --- ORDER MANAGEMENT --- //

Table orders {
  id uuid [pk, default: `gen_random_uuid()`]
  tracking_number varchar [unique, not null, note: 'BR-OL-01: LDR-YYYYMMDD-XXXX']
  customer_id uuid [ref: > customers.id, not null]
  created_by_user_id uuid [ref: > users.id, not null]

  // Load & Weight
  service_rate_id uuid [ref: > service_rates.id, not null]
  weight_kg decimal(10,2) [not null]
  total_loads int [not null, note: 'ceil(weight_kg / 8)']

  // Pricing snapshot
  base_price_per_load decimal(10,2) [not null]
  kg_limit_per_load decimal(5,2) [not null]
  price_per_extra_minute decimal(10,2) [not null]

  // Extra charges
  extra_minutes int [not null, default: 0]

  // Computed amounts
  base_amount decimal(10,2) [not null]
  extra_minutes_amount decimal(10,2) [not null]
  addons_total_amount decimal(10,2) [not null, default: 0]
  grand_total decimal(10,2) [not null]

  // Status
  current_status varchar [not null, default: 'RECEIVED', note: 'BR-OL-03']
  payment_status varchar [not null, default: 'UNPAID', note: 'BR-PAY-04']
  is_rush boolean [not null, default: false]
  notes varchar(500) [null, note: 'Special instructions']

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`, note: 'Auto-updated by trg_orders_updated_at trigger']

  Note: 'BR-OL-05: Release requires READY_FOR_PICKUP and PAID status. Audited by trg_audit_orders trigger.'
  Indexes {
    tracking_number [unique]
    (customer_id, created_at) [name: 'idx_orders_customer_created']
    current_status [name: 'idx_orders_status']
    payment_status [name: 'idx_orders_payment_status']
  }
}

Table add_on_catalog {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [unique, not null]
  default_price decimal(10,2) [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Note: 'Add-on items catalog managed by Admin.'
}

Table order_add_ons {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > orders.id, not null]
  add_on_catalog_id uuid [ref: > add_on_catalog.id, null]
  name varchar [not null]
  price decimal(10,2) [not null]
  quantity int [not null, default: 1]

  Note: 'BR-PR-04: Extra FabCon, etc.'
}

// --- PAYMENTS --- //

Table payments {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: - orders.id, unique, not null]
  amount_paid decimal(10,2) [not null, note: 'BR-PAY-03: Must match grand_total']
  payment_method varchar [not null, default: 'CASH', note: 'CASH, GCASH, BANK_TRANSFER']
  received_by_user_id uuid [ref: > users.id, not null]
  payment_date timestamp [default: `now()`]
  remarks text
  payment_reference varchar(100)

  Note: 'BR-PAY-02: Exactly one payment per order. Audited by trg_audit_payments trigger.'
  Indexes {
    payment_date [name: 'idx_payments_date']
  }
}

// --- SYSTEM SETTINGS --- //

Table system_settings {
  id bigint [pk, note: 'Single-row settings table (id = 1 constraint)']
  is_system_paused boolean [not null, default: false]
  updated_at timestamp

  Note: 'Global operational system settings (e.g. pause system).'
}

// --- NOTIFICATIONS --- //

Table client_alerts {
  id uuid [pk, default: `gen_random_uuid()`]
  order_id uuid [ref: > orders.id, not null]
  channel varchar(30) [not null, default: 'IN_APP', note: 'SMS, IN_APP']
  message text [not null]
  created_at timestamp [default: `now()`]
  sent_at timestamp [null]
  status varchar(30) [not null, default: 'PENDING', note: 'PENDING, SENT, FAILED']
  is_read boolean [not null, default: false, note: 'In-app read status flag']

  Note: 'Notification queue. customer_id removed for 3NF compliance (derivable via order_id -> customer_id).'
}

// --- MACHINES & INVENTORY --- //

Table machines {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(50) [unique, not null]
  status varchar(30) [not null, default: 'OPERATIONAL', note: 'OPERATIONAL, MAINTENANCE, OUT_OF_ORDER (BROKEN)']
  is_active boolean [default: true, note: 'Soft delete flag']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: 'Physical laundry machines tracking for availability and operations.'
}

Table order_machines {
  order_id uuid [ref: > orders.id, not null]
  machine_id uuid [ref: > machines.id, not null]

  Indexes {
    (order_id, machine_id) [pk]
  }
}

// --- AUTH HARDENING (V2) --- //

Table refresh_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null, note: 'Cascades on user delete']
  token_hash varchar(64) [unique, not null, note: 'SHA-256 of raw refresh token — never stored in plain text']
  family_id uuid [not null, note: 'Rotation family; if a superseded token is reused, the whole family is revoked']
  issued_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null]
  last_used_at timestamptz [null]
  revoked boolean [not null, default: false]
  replaced_by uuid [ref: > refresh_tokens.id, null, note: 'Points to the successor token after rotation']

  Indexes {
    family_id [name: 'idx_refresh_tokens_family']
    user_id [name: 'idx_refresh_tokens_user']
  }

  Note: 'Auth-hardening feature (V2). Enables refresh-token rotation and replay detection. One active (non-revoked, non-expired) token per session.'
}

// --- REMOTE RESILIENCE (V3) --- //

Table operation_recovery {
  operation_identifier varchar(255) [pk, note: 'Client UUID from X-Operation-Identifier header']
  actor_id uuid [not null, note: 'Authenticated user who initiated the mutation']
  action_type varchar(50) [not null, note: 'e.g. CREATE_ORDER, RECORD_PAYMENT, UPDATE_STATUS']
  status varchar(20) [not null, note: 'IN_PROGRESS | COMPLETED | FAILED']
  response_body text [null, note: 'Serialized JSON of the original response for replay']
  response_status integer [null, note: 'Original HTTP status code']
  created_at timestamptz [default: `now()`]
  expires_at timestamptz [not null, note: 'TTL for background cleanup; typically 24h']

  Indexes {
    (actor_id, action_type) [name: 'idx_operation_recovery_actor_action']
    expires_at [name: 'idx_operation_recovery_expires']
  }

  Note: 'Remote Resilience feature (V3, US3). Allows safe retry of interrupted mutations without creating duplicate records. Keyed by X-Operation-Identifier.'
}
